# Aiasistant-

./: %HOMEPATH%.sshreplit  %HOMEPATH%.sshreplit.pub  .env.example  .replit  Readme.md  app.db  app.py  database_schema.sql  main.py  pyproject.toml  streamlit_app.py
app/: __init__.py  config.py
app/middleware/: auth.py  logging.py  rate_limit.py
app/models/: appointment.py  assistant.py  subscription.py  training.py  user.py
app/routes/: appointments.py  assistants.py  auth.py  calls.py  payments.py  telegram.py  training.py  voice.py  webhooks.py  whatsapp.py
app/services/: call_service.py  database.py  email_service.py  notification_service.py  openai_service.py  sms_service.py  telegram_service.py  voice_service.py  whatsapp_service.py
app/utils/: database.py  validators.py
attached_assets/: Pasted--ESTRUCTURA-DEL-PROYECTO-proyecto-app--1749734229901_1749734229903.txt
web/: README.md  business-selection.html  contact.html  index.html  payment.html  payment.js  script.js  styles.css  training.html  training.js
