[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "gunicorn>=23.0.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sqlalchemy",
    "streamlit>=1.45.1",
    "stripe>=12.2.0",
    "supabase>=2.15.3",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "twilio>=9.6.3",
]
